Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ pool:
 
 variables:
   dockerRegistryServiceConnection: 'systimastage-basis-auth'
-  azureSubscription: 'Systima (1bf1235c-4b9e-42e2-8328-32bdab480608)'
+  azureSubscription: 'c74ce9a7-40aa-45e8-93a0-ef315aa93409'
   imageRepository: 'file-processor'
   containerRegistry: 'systimastage.azurecr.io'
   appName: 'file-processor-dev'
